Bug 1252262 - Don't combine the client offset into the outer rect for the child process. r=jimm

MozReview-Commit-ID: BslkWk7ndkx